EN-31 new employees fields, paymentinformation entity add and db script